; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_init.c__glfwCreateUTF8FromWideString.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_init.c__glfwCreateUTF8FromWideString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_UTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_glfwCreateUTF8FromWideString(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* @CP_UTF8, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @WideCharToMultiByte(i32 %6, i32 0, i32* %7, i32 -1, i8* null, i32 0, i32* null, i32* null)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

12:                                               ; preds = %1
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @calloc(i32 %13, i32 1)
  store i8* %14, i8** %4, align 8
  %15 = load i32, i32* @CP_UTF8, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @WideCharToMultiByte(i32 %15, i32 0, i32* %16, i32 -1, i8* %17, i32 %18, i32* null, i32* null)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %12
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @free(i8* %22)
  store i8* null, i8** %2, align 8
  br label %26

24:                                               ; preds = %12
  %25 = load i8*, i8** %4, align 8
  store i8* %25, i8** %2, align 8
  br label %26

26:                                               ; preds = %24, %21, %11
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i8*, i32, i32*, i32*) #1

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
